src/compile_warnings.txt
stage/scanner/scanner_scan/scanner_scan.c: In function ‘scanner_scan’:
stage/scanner/scanner_scan/scanner_scan.c:23:20: warning: implicit declaration of function ‘utf8_decode’ [-Wimplicit-function-declaration]
   23 |         char *uc = utf8_decode(scanner->source, &scanner->index, &num_bytes);
      |                    ^~~~~~~~~~~
stage/scanner/scanner_scan/scanner_scan.c:23:20: warning: initialization of ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
stage/scanner/scanner_scan/scanner_scan.c:31:17: warning: implicit declaration of function ‘error_scanner’ [-Wimplicit-function-declaration]
   31 |                 error_scanner(3, "Invalid UTF-8 encoding detected at index %d",
      |                 ^~~~~~~~~~~~~
stage/scanner/scanner_scan/scanner_scan.c:130:49: warning: implicit declaration of function ‘token_char_type’ [-Wimplicit-function-declaration]
  130 |                             token_type_t type = token_char_type(c);
      |                                                 ^~~~~~~~~~~~~~~
stage/scanner/scanner_scan/scanner_scan.c:132:40: error: ‘location_t’ undeclared (first use in this function)
  132 |                                 type, (location_t){scanner->index, 1, scanner->line,
      |                                        ^~~~~~~~~~
stage/scanner/scanner_scan/scanner_scan.c:132:40: note: each undeclared identifier is reported only once for each function it appears in
stage/scanner/scanner_scan/scanner_scan.c:132:51: error: expected ‘)’ before ‘{’ token
  132 |                                 type, (location_t){scanner->index, 1, scanner->line,
      |                                                   ^
      |                                                   )
stage/scanner/scanner_scan/scanner_scan.c:131:58: note: to match this ‘(’
  131 |                             token_t *token = token_create(
      |                                                          ^
stage/scanner/scanner_scan/scanner_scan.c:145:25: warning: implicit declaration of function ‘scanner_lex_string’ [-Wimplicit-function-declaration]
  145 |                         scanner_lex_string(scanner, 0);
      |                         ^~~~~~~~~~~~~~~~~~
stage/scanner/scanner_scan/scanner_scan.c:158:25: warning: implicit declaration of function ‘scanner_lex_number’ [-Wimplicit-function-declaration]
  158 |                         scanner_lex_number(scanner, uc);
      |                         ^~~~~~~~~~~~~~~~~~
stage/scanner/scanner_scan/scanner_scan.c:166:41: warning: implicit declaration of function ‘is_char_alpha’ [-Wimplicit-function-declaration]
  166 |                         if (c == '_' || is_char_alpha(c)) {
      |                                         ^~~~~~~~~~~~~
stage/scanner/scanner_scan/scanner_scan.c:167:29: warning: implicit declaration of function ‘scanner_lex_identifier’ [-Wimplicit-function-declaration]
  167 |                             scanner_lex_identifier(scanner, uc);
      |                             ^~~~~~~~~~~~~~~~~~~~~~
stage/scanner/scanner_scan/scanner_scan.c:186:21: warning: implicit declaration of function ‘strcmp’ [-Wimplicit-function-declaration]
  186 |                 if (strcmp(uc, "«") == 0) {
      |                     ^~~~~~
stage/scanner/scanner_scan/scanner_scan.c:2:1: note: include ‘<string.h>’ or provide a declaration of ‘strcmp’
    1 | #include <stage/scanner/scanner_scan/scanner_scan.h>
  +++ |+#include <string.h>
    2 | 
stage/scanner/scanner_scan/scanner_scan.c:190:28: warning: implicit declaration of function ‘is_utf8_digit’ [-Wimplicit-function-declaration]
  190 |                 } else if (is_utf8_digit(uc)) {
      |                            ^~~~~~~~~~~~~
stage/scanner/scanner_scan/scanner_scan.c:192:40: warning: implicit declaration of function ‘is_utf8_alpha’ [-Wimplicit-function-declaration]
  192 |                 } else if (c == '_' || is_utf8_alpha(uc) || is_char_alpha(c)) {
      |                                        ^~~~~~~~~~~~~
